Crash of Blender, if "Operator Cheat Sheet" is called #86921

Closed
opened 2021-03-25 05:35:09 +01:00 by Meino Cramer · 7 comments

System Information
Operating system: GENTOO Linux, updated daily
Graphics card: NVIDIA Corporation TU106 High Definition Audio Controller (rev a1)
Graphic driver: x11-drivers/nvidia-drivers-460.67

Blender Version
Broken: blender-2.93.0-9ac7946dd03f-linux64 & blender-2.92
Worked: Unknown

Short description of error
Blender Crashes, when "Operator Cheat Sheet" is clicked

Exact steps for others to reproduce the error
(No extra blend file needed) Open Blender with an empty scene. Click on
(Menu)->Help->Operator Cheat Sheet
Blender crashes.
This does not happen, if a blend file is loaded beforehand.
Crash files of both versions are attached.
blender-2.93alpha.crash.txt
blender-2.92.crash.txt

**System Information** Operating system: GENTOO Linux, updated daily Graphics card: NVIDIA Corporation TU106 High Definition Audio Controller (rev a1) Graphic driver: x11-drivers/nvidia-drivers-460.67 **Blender Version** Broken: blender-2.93.0-9ac7946dd03f-linux64 & blender-2.92 Worked: Unknown **Short description of error** Blender Crashes, when "Operator Cheat Sheet" is clicked **Exact steps for others to reproduce the error** (No extra blend file needed) Open Blender with an empty scene. Click on (Menu)->Help->Operator Cheat Sheet Blender crashes. This does not happen, if a blend file is loaded beforehand. Crash files of both versions are attached. [blender-2.93alpha.crash.txt](https://archive.blender.org/developer/F9908778/blender-2.93alpha.crash.txt) [blender-2.92.crash.txt](https://archive.blender.org/developer/F9908777/blender-2.92.crash.txt)
Author

Added subscriber: @mcq

Added subscriber: @mcq
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-03-25 08:17:22 +01:00
Member

Can confirm if this is called without an active object.
2.83 was fine, will check.

Can confirm if this is called without an active object. 2.83 was fine, will check.

This issue was referenced by 543becac36

This issue was referenced by 543becac36e08cdba5ba6230fe77138c0a2124f6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Fix confirmed with: blender-2.93.0-de1eeaa3d24a-linux64:
With an empty scene and nothing selected the list of operators is created with no problems at all.

Fix confirmed with: blender-2.93.0-de1eeaa3d24a-linux64: With an empty scene and nothing selected the list of operators is created with no problems at all.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86921
No description provided.