source/blender/editors/geometry/geometry_attributes.c
@@ -53,7 +53,11 @@ static const EnumPropertyItem *geometry_attribute_domain_itemf(bContext *C,
                                                                bool *r_free)
 {
   Object *ob = ED_object_context(C);
-  return rna_enum_attribute_domain_itemf(ob->data, r_free);
+  if (ob != NULL) {
+    return rna_enum_attribute_domain_itemf(ob->data, r_free);
+  }
+
+  return DummyRNA_NULL_items;
 }
 
 static int geometry_attribute_add_exec(bContext *C, wmOperator *op)
